# train-radar-nl

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  fly.toml  pyproject.toml  pytest.ini
.github/workflows/: upload-gtfs-to-tigris-daily.yml
src/: __init__.py  alerts.py  config.py  feed.py  geo.py  main.py  monitor.py  monitor_models.py  monitor_snapshot_builder.py  snapshot_view.py  static_gtfs.py  target_passage.py  time_utils.py
src/api/: __init__.py  app.py  models.py  presenter.py  service.py  ttl_cache.py
src/api/routes/: health.py  train.py
src/scripts/: __init__.py  build_minimal_gtfs_zip.py
tests/: __init__.py  conftest.py  support.py  test_api.py  test_api_units.py  test_core_modules.py  test_feed.py  test_minifier_script.py  test_monitor_and_main.py  test_monitor_snapshot_builder.py  test_static_gtfs.py
